# translate-docs-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  INVESTIGATION_REPORT.md  README.md  config.example.yaml  pyproject.toml
src/translate_docs_ai/: __init__.py  cli.py  config.py  database.py  scanner.py
src/translate_docs_ai/export/: __init__.py  docx.py  markdown.py  pdf.py  table_utils.py
src/translate_docs_ai/llm/: __init__.py  base.py  claude_code.py  factory.py  fallback.py  openrouter.py
src/translate_docs_ai/memory/: __init__.py  duckdb_store.py
src/translate_docs_ai/ocr/: __init__.py  base.py  deepinfra.py  docx.py  pymupdf.py  text.py
src/translate_docs_ai/styling/: __init__.py  extractor.py  fonts.py
src/translate_docs_ai/terminology/: __init__.py  embeddings.py  extractor.py  glossary_detector.py  llm_extractor.py
src/translate_docs_ai/translation/: __init__.py  context.py  pipeline.py  search_tools.py  translator.py
