[project]
name = "translate-docs-ai"
version = "0.1.0"
description = "AI-powered document translation pipeline with OCR, terminology extraction, and context-aware translation"
readme = "README.md"
authors = [
    { name = "yharby", email = "me@youssefharby.com" }
]
requires-python = ">=3.12"
keywords = ["ocr", "translation", "pdf", "duckdb", "langgraph", "deepseek", "olmocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "claude-agent-sdk>=0.1.17",
    "duckdb>=1.4.3",
    "httpx>=0.28.1",
    "langchain-core>=1.2.0",
    "langgraph>=1.0.5",
    "markdown-pdf>=1.10",
    "markdownify>=1.2.2",
    "openai>=2.11.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.7",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = []
docling = []

[project.scripts]
translate-docs = "translate_docs_ai.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Function call in default argument (required for typer)
    "SIM102",  # Collapsible if (readability preference)
    "SIM108",  # Ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ are for re-export

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]
